--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ table {
 }
 
 th {
-    border: 1px solid black;
+    border: 1px solid rgb(187, 49, 49);
     padding: 10px;
     color:white;
     background-color: rgb(0, 208, 255);
